Post comment reply

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,3 +1,5 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
-#admin-page { padding-top: 0; }
+#admin-page{ padding-top: 0; }
+#nested-comment{ margin-top: 60px; }
+.comment-reply{ display: none; }
